fix: body copy lenth too wide

--- a/main.css
+++ b/main.css
@@ -487,14 +487,14 @@ body {
   font-weight: bold;
 }
 .biz-day-section__container .biz-day-section__wrapper .biz-day-content__wrapper, .biz-day-section__container .biz-day-section__wrapper .biz-day-card__wrapper {
-  padding: 50px 0;
+  padding: 50px 190px;
 }
 .biz-day-section__container .biz-day-section__wrapper .biz-day-content__wrapper .biz-day__phrase:after, .biz-day-section__container .biz-day-section__wrapper .biz-day-card__wrapper .biz-day__phrase:after {
   background-color: #000;
   content: "";
   display: block;
   height: 1px;
-  margin: 15px auto;
+  margin: 30px auto;
   width: 67px;
 }
 .biz-day-section__container .biz-day-section__wrapper .biz-day-content__wrapper .biz-day__phrase:last-of-type:after, .biz-day-section__container .biz-day-section__wrapper .biz-day-card__wrapper .biz-day__phrase:last-of-type:after {
@@ -507,6 +507,7 @@ body {
   justify-content: space-evenly;
   margin: 0 auto;
   max-width: 900px;
+  padding: 50px 0;
 }
 .biz-day-section__container .biz-day-section__wrapper .biz-day-card__wrapper .bizday_card_topic {
   list-style-type: none;
